--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using System.Threading
+@using Omu.AwesomeMvc
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -10,6 +12,13 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <link href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/wui/AwesomeMvc.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/wui/awem.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet" type="text/css" />
+
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+ 
 
 </head>
 <body>
@@ -43,6 +52,24 @@
         <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
     </footer>
 </div>
+        
+<script src="@Url.Content("~/Scripts/AwesomeMvc.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/utils.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/awem.js")" type="text/javascript"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js" type="text/javascript"></script>
+<script>
+    var isMobileOrTablet = '@(MobileUtils.IsMobileOrTablet())' == "True";
+    var dateFormat = '@(AweUtil.ConvertTojQueryDateFormat(Thread.CurrentThread.CurrentCulture.DateTimeFormat.ShortDatePattern))';
+    var decimalSep = '@Thread.CurrentThread.CurrentCulture.NumberFormat.NumberDecimalSeparator';
+
+    awem.isMobileOrTablet = function () { return isMobileOrTablet; };
+
+    //init validation (dateformat, ajax loaded content, hidden inputs), cleanup awe localStorage
+    utils.init(dateFormat, isMobileOrTablet, decimalSep);
+</script>
+
+<script src="http://ajax.aspnetcdn.com/ajax/mvc/5.1/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="http://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
