--- a/OMI/Views/Solicitud/Create.cshtml
+++ b/OMI/Views/Solicitud/Create.cshtml
@@ -5,6 +5,7 @@
     using (Html.Awe().BeginContext())
     {  @Html.EditorFor(o => o.Categoria)
         @Html.EditorFor(o => o.IdUnidad)
+        @Html.EditorFor(o=> o.Cantidad)
         @Html.EditorFor(o => o.Descripcion)
 
       
