--- a/OMI/Views/Solicitud/NuevaSolicitud.cshtml
+++ b/OMI/Views/Solicitud/NuevaSolicitud.cshtml
@@ -37,7 +37,7 @@
 
                         <ul class="list-group">
                             <li class="list-group-item"><h6>No. Formato:@Html.DisplayFor(m => m.tipoformato.Nombre)</h6></li>
-                            <li class="list-group-item"><h6>Revisión: 1.0</h6></li>
+                            <li class="list-group-item"><h6>Revisión: @Html.DisplayFor(m=>m.tipoformato.Revision)</h6></li>
                         </ul>
                     </div>
                 </div>
