--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                 <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                 <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                 <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                <li>@Html.ActionLink("NuevoFormato", "NuevaSolicitud", "Solicitud")</li>
+                <li>@Html.ActionLink("Pedido Material", "NuevaSolicitud", "Solicitud")</li>
             </ul>
 
             @Html.Partial("_LoginPartial")
@@ -49,7 +49,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+        <p>&copy; @DateTime.Now.Year OnePro Ingenieria Aplicada</p>
     </footer>
 </div>
         
