--- a/OMI/Views/Solicitud/NuevaSolicitud.cshtml
+++ b/OMI/Views/Solicitud/NuevaSolicitud.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewBag.Title = "NuevaSolcitud";
 }
-
+@Html.AntiForgeryToken()
 @using (@Html.BeginForm("NuevaSolicitud", "Solicitud", FormMethod.Post))
 {
     <div class="container">
@@ -21,7 +21,7 @@
                         <h3>Ingenieria Aplicada OnePro</h3><br>
 
 
-                        <h1>@Html.DisplayFor(m=>m.tipoformato.Descripcion)</h1>
+                        <h1>@Html.DisplayFor(m=>m.TbSol.TbFormato.Descripcion)</h1>
                     </span>
 
                 </div>
@@ -36,8 +36,8 @@
                         </div>
 
                         <ul class="list-group">
-                            <li class="list-group-item"><h6>No. Formato:@Html.DisplayFor(m => m.tipoformato.Nombre)</h6></li>
-                            <li class="list-group-item"><h6>Revisión: @Html.DisplayFor(m=>m.tipoformato.Revision)</h6></li>
+                            <li class="list-group-item"><h6>No. Formato:@Html.DisplayFor(m => m.TbSol.TbFormato.Nombre)</h6></li>
+                            <li class="list-group-item"><h6>Revisión: @Html.DisplayFor(m=>m.TbSol.TbFormato.Revision)</h6></li>
                         </ul>
                     </div>
                 </div>
@@ -50,8 +50,8 @@
 
                 <div class="panel-body">
                     <ul class="list-group">
-                        <li class="list-group-item"><h6>Area Solicitante <span style="color: red;"><strong> @Html.DisplayFor(m => m.usuario.TbArea.Nombre)</strong></span></h6></li>
-                        <li class="list-group-item"><h6>Usuario:<span style="color:red"><strong> @Html.DisplayFor(m => m.usuario.Nombre)</strong></span></h6></li>
+                        <li class="list-group-item"><h6>Area Solicitante <span style="color: red;"><strong> @Html.DisplayFor(m => m.TbSol.TbUsuario.TbArea.Nombre)</strong></span></h6></li>
+                        <li class="list-group-item"><h6>Usuario:<span style="color:red"><strong> @Html.DisplayFor(m => m.TbSol.TbUsuario.Nombre)</strong></span></h6></li>
                         <li class="list-group-item"><h6>Fecha:<span style="color:red"><strong> @Html.DisplayFor(m => m.FechaCorta)</strong></span></h6></li>
                  
                     </ul>
@@ -62,7 +62,7 @@
             @* popup names will be action + gridid; name is used when calling awe.open(name) *@
 
             <div class="bar">
-                <button type="button" onclick="awe.open('createDinnersGrid')" class="awe-btn mbtn">Create</button>
+                <button type="button" onclick="awe.open('createDinnersGrid')" class="awe-btn mbtn">Nuevo Pedido</button>
             </div>
 
             @(Html.Awe().Grid("DinnersGrid")
@@ -92,12 +92,46 @@
             <br/>
         </div>
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="NuevaSolicitud" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-10 " style="align-items: right;">
+                <a class="btn btn-danger" id="btnCancelar" href="@Url.Action("Cancelar", "Solicitud")">Cancelar</a>
+                <input type="submit" value="Guardar" id="btnSave" class="btn btn-primary"/>
+
+                <a class="btn btn-success" id="btnCancelar" href="@Url.Action("Enviar", "Solicitud")">Enviar</a>
+
             </div>
         </div>
     </div>
 }
+<script type="text/javascript">
+    
+    $(document).ready(function () {
+        
+        $("#btnSave").click(function () {
+            
+            var form = $(this).parent("form");
+            
+            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Solicitud", Action = "NuevaSolicitud" }) %>');
+            
+            form.attr('method', 'post');
+            
+        });
+        
+ 
+        
+        $("#btnCancelar").click(function () {
+            
+            var form = $(this).parent("form");
+            
+            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Solicitud", Action = "Cancelar" }) %>');
+            
+            form.attr('method', 'get');
+            
+        });
+        
+    });
+   
+</script>
+
 
 
 
