--- a/OMI/Views/Usuario/Register.cshtml
+++ b/OMI/Views/Usuario/Register.cshtml
@@ -32,7 +32,8 @@
                     <div class="form-group">
                         @Html.LabelFor(m => m.Nivel, new { @class = "col-md-2 control-label" })
                         <div class="col-md-4">
-                            @Html.TextBoxFor(m => m.Nivel, new { @class = "form-control" })
+                            @*Html.TextBoxFor(m => m.Nivel, new { @class = "form-control" })*@
+                            @Html.DropDownList("Nivel", ViewBag.Areas as SelectList,"Seleccione", htmlAttributes: new { @class = "form-control jsfilter"})
                         </div>
                         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                         <div class="col-md-4">
