--- a/OMI/Views/Solicitud/Create.cshtml
+++ b/OMI/Views/Solicitud/Create.cshtml
@@ -3,7 +3,8 @@
 @using (Html.BeginForm())
 {
     using (Html.Awe().BeginContext())
-    {  @Html.EditorFor(o => o.Categoria)
+    { 
+         @Html.EditorFor(o => o.Categoria)
         @Html.EditorFor(o => o.IdUnidad)
         @Html.EditorFor(o=> o.Cantidad)
         @Html.EditorFor(o => o.Descripcion)
