--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -45,9 +45,9 @@
 <!-- Top Bar Start -->
 <div class="topbar">
     <!-- LOGO -->
-    <div class="topbar-left">
+    <div class="topbar-left">B
         <div class="text-center">
-            <a href="index.html" class="logo"><i class="md md-terrain"></i> <span>OnePro</span></a>
+            <a href="@Url.Action("Index", "Home")" class="logo"><i class="md md-terrain"></i> <span>OnePro</span></a>
         </div>
     </div>
     <!-- Button mobile view to collapse sidebar menu -->
@@ -62,7 +62,7 @@
                 </div>
                 <form class="navbar-form pull-left" role="search">
                     <div class="form-group">
-                        <input type="text" class="form-control search-bar" placeholder="Type here for search...">
+                        <input type="text" class="form-control search-bar" placeholder="Buscar">
                     </div>
                     <button type="submit" class="btn btn-search"><i class="fa fa-search"></i></button>
                 </form>
@@ -134,7 +134,7 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle profile" data-toggle="dropdown" aria-expanded="true"><img src="~/Content/assets/images/users/avatar-1.jpg" alt="user-img" class="img-circle"> </a>
                         <ul class="dropdown-menu">
-                            <li><a href="javascript:void(0)"><i class="md md-face-unlock"></i> Profile</a></li>
+                            <li><a href="#"><i class="md md-face-unlock"></i> Profile</a></li>
                             <li><a href="javascript:void(0)"><i class="md md-settings"></i> Settings</a></li>
                             <li><a href="javascript:void(0)"><i class="md md-lock"></i> Lock screen</a></li>
                             <li><a href="javascript:void(0)"><i class="md md-settings-power"></i> Logout</a></li>
@@ -159,7 +159,7 @@
             </div>
             <div class="user-info">
                 <div class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">John Doe <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Administrador<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0)"><i class="md md-face-unlock"></i> Profile<div class="ripple-wrapper"></div></a></li>
                         <li><a href="javascript:void(0)"><i class="md md-settings"></i> Settings</a></li>
@@ -175,14 +175,15 @@
         <div id="sidebar-menu">
             <ul>
                 <li>
-                    <a href="@Url.Action("Index", "Home")" class="waves-effect"><i class="md md-home"></i><span> Home </span></a>
+                    <a href="@Url.Action("Index", "Home")" class="waves-effect"><i class="md md-home"></i><span> Inicio </span></a>
                 </li>
 
                 <li class="has_sub">
                     <a href="#" class="waves-effect"><i class="md md-laptop-windows"></i><span> Pedido Material </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
+                        <li><a href="@Url.Action("Lista", "Solicitud")">Registro</a></li>
                         <li><a href="@Url.Action("NuevaSolicitud", "Solicitud")">Nueva Solicitud</a></li>
-                      
+
                     </ul>
                 </li>
 
@@ -230,109 +231,7 @@
 <div class="side-bar right-bar nicescroll">
     <h4 class="text-center">Chat</h4>
     <div class="contact-list nicescroll">
-        <ul class="list-group contacts-list">
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-1.jpg" alt="">
-                    </div>
-                    <span class="name">Chadengle</span>
-                    <i class="fa fa-circle online"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-2.jpg" alt="">
-                    </div>
-                    <span class="name">Tomaslau</span>
-                    <i class="fa fa-circle online"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-3.jpg" alt="">
-                    </div>
-                    <span class="name">Stillnotdavid</span>
-                    <i class="fa fa-circle online"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-4.jpg" alt="">
-                    </div>
-                    <span class="name">Kurafire</span>
-                    <i class="fa fa-circle online"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-5.jpg" alt="">
-                    </div>
-                    <span class="name">Shahedk</span>
-                    <i class="fa fa-circle away"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-6.jpg" alt="">
-                    </div>
-                    <span class="name">Adhamdannaway</span>
-                    <i class="fa fa-circle away"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-7.jpg" alt="">
-                    </div>
-                    <span class="name">Ok</span>
-                    <i class="fa fa-circle away"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-8.jpg" alt="">
-                    </div>
-                    <span class="name">Arashasghari</span>
-                    <i class="fa fa-circle offline"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-9.jpg" alt="">
-                    </div>
-                    <span class="name">Joshaustin</span>
-                    <i class="fa fa-circle offline"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-          
-            <li class="list-group-item">
-                <a href="#">
-                    <div class="avatar">
-                        <img src="~/Content/assets/images/users/avatar-10.jpg" alt="">
-                    </div>
-                    <span class="name">Sortino</span>
-                    <i class="fa fa-circle offline"></i>
-                </a>
-                <span class="clearfix"></span>
-            </li>
-        </ul>
+       
     </div>
 </div>
 <!-- /Right-bar -->
