--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
     <link href="@Url.Content("~/Content/themes/wui/AwesomeMvc.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/wui/awem.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet" type="text/css" />
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -255,8 +257,9 @@
 <script src="~/Content/assets/js/wow.min.js"></script>
 <script src="~/Content/assets/js/jquery.nicescroll.js"></script>
 <script src="~/Content/assets/js/jquery.scrollTo.min.js"></script>
-
 <script src="~/Content/assets/js/jquery.app.js"></script>
+    
+@*jquery needs to be at the top*@
 <script src="@Url.Content("~/Scripts/AwesomeMvc.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/utils.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/awem.js")" type="text/javascript"></script>
@@ -271,6 +274,8 @@
     //init validation (dateformat, ajax loaded content, hidden inputs), cleanup awe localStorage
     utils.init(dateFormat, isMobileOrTablet, decimalSep);
 </script>
+<script src="http://ajax.aspnetcdn.com/ajax/mvc/5.1/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="http://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
 @RenderSection("scripts", required: false)
 </body>
 </html>
