--- a/OMI/Views/Solicitud/NuevaSolicitud.cshtml
+++ b/OMI/Views/Solicitud/NuevaSolicitud.cshtml
@@ -7,7 +7,6 @@
     ViewBag.Title = "NuevaSolcitud";
 }
 
-<script src="~/Scripts/jquery-3.1.1.js"></script>
 
 <div class="row">
     <div class="col-md-12">
@@ -42,7 +41,7 @@
                                     <div class="panel-body">
                                         <div class="input-group ">
                                             <span class="input-group-addon" id="sizing-addon4">Folio</span>
-                                            <input type="text" class="form-control" name="Folio" placeholder="Username" aria-describedby="sizing-addon1" value="@Html.DisplayFor(m=>m.Folio)" style="text-align: right; color: red" readonly="true">
+                                            <input type="text" class="form-control" name="Folio" placeholder="Username" aria-describedby="sizing-addon1" value="@Html.DisplayFor(m=>m.TbSol.Folio)" style="text-align: right; color: red" readonly="true">
                                         </div>
 
                                         <ul class="list-group">
@@ -117,6 +116,7 @@
         </div>
     </div>
 </div>
+
 
 <script type="text/javascript">
     
