--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 <body class="fixed-left">
         
 <!-- Begin page -->
-<div id="wrapper">
+<div id="wrapper" class="forced enlarged">
         
 <!-- Top Bar Start -->
 <div class="topbar">
@@ -183,7 +183,7 @@
                 <li class="has_sub">
                     <a href="#" class="waves-effect"><i class="md md-laptop-windows"></i><span> Pedido Material </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
-                        <li><a href="@Url.Action("Lista", "Solicitud")">Registro</a></li>
+                        <li><a href="@Url.Action("Concentrado", "Solicitud")">Registro</a></li>
                         <li><a href="@Url.Action("NuevaSolicitud", "Solicitud")">Nueva Solicitud</a></li>
 
                     </ul>
@@ -276,6 +276,9 @@
 </script>
 <script src="http://ajax.aspnetcdn.com/ajax/mvc/5.1/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="http://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
+    
+@Styles.Render("~/Content/datatables")
+@Scripts.Render("~/bundles/datatables")
 @RenderSection("scripts", required: false)
 </body>
 </html>
