--- a/OMI/Views/Unidad/Index.cshtml
+++ b/OMI/Views/Unidad/Index.cshtml
@@ -4,30 +4,55 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<link href="@Url.Content("~/Contents/Gridmvc.css")"/>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-border panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">TITULO APP</h3>
+            </div>
+            <div class="panel-body">
+                <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th></th>
-    </tr>
+                <p>
+                    @Html.ActionLink("Create New", "Create")
+                </p>
+                <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
+                    <thead>   <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Nombre)
+                        </th>
+                        <th></th>
+                    </tr>
+                    </thead>
+   
+                    <tbody>
+                    @foreach (var item in Model) {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Nombre)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+                </table>
+            </div></div></div>
+</div>
+
+@section Scripts
+{
+    
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('#assets-data-table').DataTable();
+        });
+    </script>   
+    
 }
-
-</table>
