--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-
+   
         
 </head>
 
@@ -197,17 +197,27 @@
             <ul>
                 <li>
                     <a href="@Url.Action("Index", "Home")" class="waves-effect"><i class="md md-home"></i><span> Inicio </span></a>
+                    <ul class="list-unstyled">
+                    <li><a href="@Url.Action("AllSolicitud", "Solicitud")">Todos las Solicitudes</a></li>
+                    <li><a href="@Url.Action("Concentrado", "Solicitud")">Todos los Pedidos</a></li>
+                    </ul>
                 </li>
 
                 <li class="has_sub">
-                    <a href="#" class="waves-effect"><i class="md md-laptop-windows"></i><span> Pedido Material </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <a href="#" class="waves-effect"><i class="md md-laptop-windows"></i><span>Producto / Servicio</span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
-                        <li><a href="@Url.Action("AllSolicitud", "Solicitud")">Todos las Solicitudes</a></li>
-                        <li><a href="@Url.Action("Concentrado", "Solicitud")">Todos los Pedidos</a></li>
-                        <li><a href="@Url.Action("NuevaSolicitud", "Solicitud")">Nueva Solicitud</a></li>
+                       <li><a href="@Url.Action("NuevaSolicitud", "Solicitud")">Nueva Solicitud</a></li>
 
                     </ul>
                 </li>
+                <li class="has_sub">
+                    <a href="#" class="waves-effect"><i class="md md-people"></i><span>Personal</span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <ul class="list-unstyled">
+                       
+                            <li><a href="@Url.Action("Index", "Personal")">Nueva Solicitud</a></li>
+
+                    </ul>
+             </li>
 
              
             </ul>
