--- a/OMI/Views/Solicitud/AllSolicitud.cshtml
+++ b/OMI/Views/Solicitud/AllSolicitud.cshtml
@@ -3,59 +3,85 @@
 @{
     ViewBag.Title = "AllSolicitud";
 }
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-border panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Ingenieria Aplicada OnePro</h3>
+            </div>
+            <div class="panel-body">
+                <h2>AllSolicitud</h2>
 
-<h2>AllSolicitud</h2>
-
-<p>
-    <a class="btn btn-success" id="NuevoPedido" href="@Url.Action("NuevaSolicitud","Solicitud" ,new { id=-1})">Nuevo Pedido</a>
+                <p>
+                    <a class="btn btn-success" id="NuevoPedido" href="@Url.Action("NuevaSolicitud","Solicitud" ,new { id=-1})">Solicitud de Productos / Servicios</a>
                   
-</p>
-<table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
-    <thead>   <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Folio)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fecha)
-        </th>
+                </p>
+                <p>
+                    <a class="btn btn-success" id="NuevoPersonal" href="@Url.Action("Index","Personal" ,new { id=-1})">Solicitud de Personal</a>
 
+                </p>
+                <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
+                    <thead>   <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Folio)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Fecha)
+                        </th>
 
-        <th>
-            @Html.DisplayNameFor(model => model.TbFormato.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
-        </th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
+                        <th>
+                            @Html.DisplayNameFor(model => model.TbFormato.Nombre)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Enviado)
+                        </th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
 
-    @foreach (var item in Model) {
-        <tr><td>
-    @Html.DisplayFor(modelItem => item.Folio)
-</td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fecha)
-            </td>
-           
-           
-            <td>
-                @Html.DisplayFor(modelItem => item.TbFormato.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.IdSolicitud }) |
-                @Html.ActionLink("Details", "Details", new { id=item.IdSolicitud }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.IdSolicitud })
-            </td>
-        </tr>
-    }
-    </tbody>
+                    @foreach (var item in Model)
+                    {
+        
 
-</table>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Folio)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Fecha)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TbFormato.Nombre)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Enviado)
+                            </td>
+                            <td>
+                   
+                                @Html.ActionLink("Details", "Details", new {id = item.IdSolicitud, idfor = item.IdFormato })
+                                <span> &#124; </span>
+                                @Html.ActionLink("Delete", "DeleteM", new {id = item.IdSolicitud, idfor = item.IdFormato })
+                    
+
+                            </td>
+                        </tr>
+         
+                    }
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+   
 
 @section Scripts
 {
