--- a/OMI/Views/Solicitud/NuevaSolicitud.cshtml
+++ b/OMI/Views/Solicitud/NuevaSolicitud.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewBag.Title = "NuevaSolcitud";
 }
-
+@Html.AntiForgeryToken()
 
 <div class="row">
     <div class="col-md-12">
@@ -15,9 +15,8 @@
                 <h3 class="panel-title">Ingenieria Aplicada OnePro</h3>
             </div>
             <div class="panel-body">
-                @Html.AntiForgeryToken()
-                @using (@Html.BeginForm("NuevaSolicitud", "Solicitud", FormMethod.Post))
-                {
+              
+               
                     <div class="container">
 
                         <div class="row">
@@ -27,10 +26,10 @@
 
 
                                     <span class="container">
-                                    
 
 
-                                        <h1>@Html.DisplayFor(m=>m.TbSol.TbFormato.Descripcion)</h1>
+
+                                        <h1>@Html.DisplayFor(m => m.TbSol.TbFormato.Descripcion)</h1>
                                     </span>
 
                                 </div>
@@ -41,12 +40,12 @@
                                     <div class="panel-body">
                                         <div class="input-group ">
                                             <span class="input-group-addon" id="sizing-addon4">Folio</span>
-                                            <input type="text" class="form-control" name="Folio" placeholder="Username" aria-describedby="sizing-addon1" value="@Html.DisplayFor(m=>m.TbSol.Folio)" style="text-align: right; color: red" readonly="true">
+                                            <input type="text" class="form-control" name="Folio" placeholder="Username" aria-describedby="sizing-addon1" value="@Html.DisplayFor(m => m.TbSol.Folio)" style="text-align: right; color: red" readonly="true">
                                         </div>
 
                                         <ul class="list-group">
                                             <li class="list-group-item"><h6>No. Formato:@Html.DisplayFor(m => m.TbSol.TbFormato.Nombre)</h6></li>
-                                            <li class="list-group-item"><h6>Revisión: @Html.DisplayFor(m=>m.TbSol.TbFormato.Revision)</h6></li>
+                                            <li class="list-group-item"><h6>Revisión: @Html.DisplayFor(m => m.TbSol.TbFormato.Revision)</h6></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -60,93 +59,152 @@
                                 <div class="panel-body">
                                     <ul class="list-group">
                                         <li class="list-group-item"><h6>Area Solicitante <span style="color: red;"><strong> @Html.DisplayFor(m => m.TbSol.TbUsuario.TbArea.Nombre)</strong></span></h6></li>
-                                        <li class="list-group-item"><h6>Usuario:<span style="color:red"><strong> @Html.DisplayFor(m => m.TbSol.TbUsuario.Nombre)</strong></span></h6></li>
-                                        <li class="list-group-item"><h6>Fecha:<span style="color:red"><strong> @Html.DisplayFor(m => m.FechaCorta)</strong></span></h6></li>
-                 
+                                        <li class="list-group-item"><h6>Usuario:<span style="color: red"><strong> @Html.DisplayFor(m => m.TbSol.TbUsuario.Nombre)</strong></span></h6></li>
+                                        <li class="list-group-item"><h6>Fecha:<span style="color: red"><strong> @Html.DisplayFor(m => m.FechaCorta)</strong></span></h6></li>
+
                                     </ul>
                                 </div>
                             </div>
-            
+                            
+                           
+
                             @Html.InitCrudPopupsForGrid("DinnersGrid", "Solicitud")
                             @* popup names will be action + gridid; name is used when calling awe.open(name) *@
+                            @if (ViewBag.Visible == 0)
+                            {
+                                <div class="bar">
+                                    <button type="button" onclick="awe.open('createDinnersGrid')" class="awe-btn mbtn">Agregar</button>
+                                </div>
 
-                            <div class="bar">
-                                <button type="button" onclick="awe.open('createDinnersGrid')" class="awe-btn mbtn">Agregar</button>
-                            </div>
+                                @(Html.Awe().Grid("DinnersGrid")
+                                      .Mod(o => o.PageInfo().ColumnsSelector().ColumnsAutohide())
+                                      .Url(Url.Action("GridGetItems", "Solicitud"))
+                                      .Resizable()
+                                      .Reorderable()
+                                      .Height(700)
+                                      .Paging(false)
+                                      .Groupable(false)
 
-                            @(Html.Awe().Grid("DinnersGrid")
-                                  .Mod(o => o.PageInfo().ColumnsSelector().ColumnsAutohide())
-                                  .Url(Url.Action("GridGetItems", "Solicitud"))
-                                  .Resizable()
-                                  .Reorderable()
-                                  .Height(700)
-                                  .Paging(false)
-                                  .Groupable(false)
-                 
-                                  .Columns(
-                                      new Column{Name = "Id", Width = 55,Hidden = true},
-                                      new Column{Name="Categoria", ClientFormat = ".Categoria", Header = "Categoria"},
+                                      .Columns(
+                                          new Column {Name = "Id", Width = 55, Hidden = true},
+                                          new Column {Name = "Categoria", ClientFormat = ".Categoria", Header = "Categoria"},
 
-                                      new Column { Name = "Cantidad" },
-                                      new Column {Name = "Unidad"},
-                                      new Column{Name = "Descripcion"}.Mod(o => o.Nohide()),
-                                      new Column { Name = "IdSupervisor", Header  ="Autoriza"},
-                                      new Column { Name = "Estatus"},
-                     
-                                      /*new Column{Name = "Date"},
-                      new Column{Name = "Chef.FirstName,Chef.LastName", ClientFormat = ".ChefName", Header = "Chef"},
-                      new Column{ClientFormat = ".Meals", Header = "Meals"},*/
-                                      new Column {ClientFormat = GridUtils.EditFormatForGrid("DinnersGrid"), Width = 50}.Mod(o => o.Nohide()),
-                                      new Column{ClientFormat = GridUtils.DeleteFormatForGrid("DinnersGrid"), Width = 50}.Mod(o => o.Nohide())))
+                                          new Column {Name = "Cantidad"},
+                                          new Column {Name = "Unidad"},
+                                          new Column {Name = "Descripcion"}.Mod(o => o.Nohide()),
+                                          new Column {Name = "IdSupervisor", Header = "Autoriza"},
+                                          new Column {Name = "Estatus"},
+                                          new Column {ClientFormat = GridUtils.EditFormatForGrid("DinnersGrid"), Width = 50}.Mod(o => o.Nohide()),
+                                          new Column {ClientFormat = GridUtils.DeleteFormatForGrid("DinnersGrid"), Width = 50}.Mod(o => o.Nohide())))
+                            }
+                            else
+                            {
+                                @(Html.Awe().Grid("DinnersGrid")
+                                      .Mod(o => o.PageInfo().ColumnsSelector().ColumnsAutohide())
+                                      .Url(Url.Action("GridGetItems", "Solicitud"))
+                                      .Resizable()
+                                      .Reorderable()
+                                      .Height(700)
+                                      .Paging(false)
+                                      .Groupable(false)
+
+                                      .Columns(
+                                          new Column {Name = "Id", Width = 55, Hidden = true},
+                                          new Column {Name = "Categoria", ClientFormat = ".Categoria", Header = "Categoria"},
+
+                                          new Column {Name = "Cantidad"},
+                                          new Column {Name = "Unidad"},
+                                          new Column {Name = "Descripcion"}.Mod(o => o.Nohide()),
+                                          new Column {Name = "IdSupervisor", Header = "Autoriza"},
+                                          new Column {Name = "Estatus", ClientFormatFunc = "formatPrice", }))
+                            }
+
                             <br/>
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10 " style="align-items: right;">
-                                <a class="btn btn-danger" id="btnCancelar" href="@Url.Action("Cancelar", "Solicitud")">Cancelar</a>
-                             @*  <input type="submit" value="Guardar" id="btnSave" class="btn btn-primary"/>*@
-                                <a class="btn btn-primary" id="btnSave" href="@Url.Action("Guadar", "Solicitud")">Guardar</a>
-                                <a class="btn btn-success" id="btnCancelar" href="@Url.Action("Enviar", "Solicitud")">Enviar</a>
+                               
+                                @using (Html.BeginForm("Enviar", "Solicitud", FormMethod.Post, new { @class = "normalPost" }))
+                                {
+                                    if (ViewBag.Visible == 0)
+                                    {
+                                        <a class="btn btn-danger" id="btnCancelar" href="@Url.Action("Cancelar", "Solicitud")">Cancelar</a>
+                                    @*  <input type="submit" value="Guardar" id="btnSave" class="btn btn-primary"/><a class="btn btn-success" id="btnCancelar" href="@Url.Action("Enviar", "Solicitud")">Enviar</a>*@
+                                        <a class="btn btn-primary" id="btnSave" href="@Url.Action("Guadar", "Solicitud")">Guardar</a>
 
+                                        <button type="submit" class="btn btn-success">Enviar</button>
+                                    }
+                                }
+                                @(Html.Awe().Form()
+                                      .UseAjax(false)
+                                      .Confirm(true)
+                                      .FormClass("normalPost")
+                                      .ConfirmOptions(o => {o.Message="Esta seguro de enviar esta Solicitud";
+                                                               o.Title = "Confirmar envio";
+                                                               o.YesText = "Enviar";
+                                                               o.NoText = "Cancelar";
+
+                                      })
+                                      .Tag(new { target = "confirmCont" }))
+                                <div id="confirmCont"></div>
+
+                                
+                           
                             </div>
                         </div>
                     </div>
-                }
+                
     
             </div>
         </div>
     </div>
-</div>
+    </div>
+@section Scripts
+{
 
+    <script type="text/javascript">
+        //custom checkbox using bootstrap-toggle plugin (http://www.bootstraptoggle.com)
+        $(function () {
+            $('#DinnersGrid').on('awerender', function () {
+                $(this).find(".checkbox-toggle").bootstrapToggle();
+            });
+        });
 
-<script type="text/javascript">
-    
-    $(document).ready(function () {
-        
-        $("#btnSave").click(function () {
-            
-            var form = $(this).parent("form");
-            
-            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Solicitud", Action = "NuevaSolicitud" }) %>');
-            
-            form.attr('method', 'post');
-            
-        });
-        
- 
-        
-        $("#btnCancelar").click(function () {
-            
-            var form = $(this).parent("form");
-            
-            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Solicitud", Action = "Cancelar" }) %>');
-            
-            form.attr('method', 'get');
-            
-        });
-        
-    });
-   
-</script>
+        var toggleButton = function (model, prop) {
+            var checked = model[prop] ? 'checked = "checked"' : '';
+            return '<input type="checkbox" ' + checked + ' class="checkbox-toggle" data-toggle="toggle" data-on="Yes" data-off="No" data-size="small">';
+        };
+
+        function formatPrice(lunch, prop) {
+            var color = 'maroon';
+            var estado = lunch[prop];
+            if (estado =='Autorizado') color = 'green';
+            if (estado =='Rechazado') color = 'red';
+            return "<div style='color:" + color + ";text-width:bold;'>" + estado + " </div>";
+        }
+
+        function useTemplate(id) {
+            return function (model) {
+                var str = $('#' + id).html();
+                for (var name in model) {
+                    str = str.replace("." + name, model[name]);
+                }
+                return str;
+            };
+        }
+    </script>
+    <style>
+        .maro {
+            color: maroon;
+        }
+    </style>
+    <div id="template1" style="display: none">
+        .Person spent .Price £
+    </div>
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+
+}
 
 
 
