lo de oportunidad

--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -57,9 +57,20 @@
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
                        
                             
-                                <li><a href="@Url.Action("Index", "home")">CV</a></li>
-                                <li><a href="@Url.Action("Index", "home")">Asistencia</a></li>
-                                <li><a href="@Url.Action("index", "home")">Comisiones</a></li>
+                        <li><a href="@Url.Action("Index", "home")">CV</a></li>
+                        <li><a href="@Url.Action("Index", "home")">Asistencia</a></li>
+                        <li><a href="@Url.Action("index", "home")">Comisiones</a></li>
+                     
+                    </ul>
+                </li>
+                <li class="has_sub">
+                    <a href="#" class="waves-effect"><i class="md md-people"></i><span>Oportunidad</span><span class="pull-right"><i class="md md-add"></i></span></a>
+               
+                    <ul class="list-unstyled">
+                        <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
+                       
+                            
+                        <li><a href="@Url.Action("Index", "Oportunidad")">Nueva Oportunidad</a></li>
                      
                     </ul>
                 </li>
