--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -69,7 +69,7 @@
                     <ul class="list-unstyled">
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
                        
-                            
+                        <li><a href="@Url.Action("List", "Oportunidad")">Registro</a></li>                        
                         <li><a href="@Url.Action("Index", "Oportunidad")">Nueva Oportunidad</a></li>
                      
                     </ul>
